--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Xin chào </h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Xin chào C# học quá khó đi thôi</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Đường dẫn</a>.</p>
 </div>
